--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body{
   background-color: #1444CC;
-  background-image: url("/images/CcxbSFPW0AAG2ZW.jpg:large.jpeg");
+  background-image: url("images/CcxbSFPW0AAG2ZW.jpg:large.jpeg");
 }
 #core-nav{
   visibility: hidden;
