--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body{
   background-color: #1444CC;
-  background-image: url("images/CcxbSFPW0AAG2ZW.jpg:large.jpeg");
+  background-image: url("./images/CcxbSFPW0AAG2ZW.jpg:large.jpeg");
 }
 #core-nav{
   visibility: hidden;
@@ -59,15 +59,15 @@ li {
 
 @font-face {
    font-family: 'moonbeam';
-   src: url('/fonts/MoonbeamRegular.ttf');
+   src: url('./fonts/MoonbeamRegular.ttf');
  }
 
  @font-face {
     font-family: 'rowdyheavy';
-    src: url('/fonts/RowdyHeavyRegular.ttf');
+    src: url('./fonts/RowdyHeavyRegular.ttf');
   }
 
   @font-face {
      font-family: 'segoe-script';
-     src: url('/fonts/ufonts.com_segoe-script.ttf');
+     src: url('./fonts/ufonts.com_segoe-script.ttf');
    }
