--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body{
 }
 
 #depyval{
-  background-image: url("../images/hands.jpeg");
+  background-image: url("../images/hands.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 25%;
